feat(learnspark): adding logger...

--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,8 @@
         <scala.dep.version>2.13</scala.dep.version>
         <spark.version>3.5.1</spark.version>
         <lombok.version>1.18.30</lombok.version>
+        <slf4j-api.version>2.0.9</slf4j-api.version>
+        <logback-classic.version>1.4.14</logback-classic.version>
     </properties>
 
     <dependencies>
@@ -33,7 +35,16 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>${lombok.version}</version>
-            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>${slf4j-api.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>${logback-classic.version}</version>
         </dependency>
     </dependencies>
 
